--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,4 +4,4 @@ jobs:
     docker:
       - image: circleci/node:10
     steps:
-      - run: echo "hello world"
+      - run: echo "hello circle-ci"
