--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   deploy:
     docker:
-      - image: circleci/php:7.2.5-browsers
+      - image: circleci/php
     working_directory: ~/repo
     steps:
       - checkout
