--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,6 @@ jobs:
   deploy:
     docker:
       - image: circleci/php
-    working_directory: ~/repo
     steps:
       - checkout
       - run: 
@@ -13,7 +12,7 @@ jobs:
             sudo apt-get -qq install git-ftp
             echo "Deploying project ..."
             echo $(git status)
-            git ftp init --init-if-not-exist --user "${FTP_USER}" --passwd "${FTP_PWD}" ${FTP_LOCATION}
+            git ftp init --init-if-not-exist --user "${FTP_USER}" --passwd "${FTP_PWD}" "${FTP_LOCATION}" "${FTP_URL}"
  
 workflows:
   version: 2
