--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
             sudo apt-get -qq install git-ftp
             echo "Deploying project ..."
             echo $(git status)
-            git ftp init -v
+            echo $(git ftp init -v)
             git ftp --user "${FTP_USER}" --passwd "${FTP_PWD}" --remote-root "${FTP_LOCATION}" -P "${FTP_URL}"
  
 workflows:
