--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,8 +12,7 @@ jobs:
             sudo apt-get -qq install git-ftp
             echo "Deploying project ..."
             echo $(git status)
-            echo $(git ftp init -v)
-            git ftp push --user "${FTP_USER}" --passwd "${FTP_PWD}" --remote-root "${FTP_LOCATION}" "${FTP_URL}"
+            git ftp init --init-if-not-exist --user "${FTP_USER}" --passwd "${FTP_PWD}" --remote-root ${FTP_LOCATION} ${FTP_URL}
  
 workflows:
   version: 2
