--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,8 @@ jobs:
             sudo apt-get -qq install git-ftp
             echo "Deploying project ..."
             echo $(git status)
-            git ftp init --init-if-not-exist --user "${FTP_USER}" --passwd "${FTP_PWD}" --remote-root ${FTP_URL}
+            echo $(git ftp init --vv)
+            git ftp push --user "${FTP_USER}" --passwd "${FTP_PWD}" --remote-root ${FTP_LOCATION}
  
 workflows:
   version: 2
