--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,8 +12,7 @@ jobs:
             sudo apt-get -qq install git-ftp
             echo "Deploying project ..."
             echo $(git status)
-            echo $(git ftp init --vv)
-            git ftp push --user "${FTP_USER}" --passwd "${FTP_PWD}" --remote-root ${FTP_LOCATION}
+            git ftp push --user "${FTP_USER}" --passwd "${FTP_PWD}" ${FTP_LOCATION}
  
 workflows:
   version: 2
