--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,11 +12,11 @@ jobs:
             sudo apt-get -qq install git-ftp
             echo "Deploying project ..."
             echo $(git status)
-            git config git-ftp.user ${FTP_USER}
-            git config git-ftp.url ${FTP_URL}
-            git config git-ftp.password "${FTP_PWD}"
+            git config git-ftp.user $FTP_USER
+            git config git-ftp.url $FTP_URL
+            git config git-ftp.password $FTP_PWD
             git ftp init -v
-            git ftp push -u "${FTP_USER}" -p "${FTP_PWD}" --remote-root ${FTP_LOCATION}
+            git ftp push -u $FTP_USER -p $FTP_PWD --remote-root $FTP_LOCATION
  
 workflows:
   version: 2
